--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -1494,13 +1494,15 @@ lines(density(numberafter),lwd=2,col="red") #the after condition. Should be able
 # We now set our range of likely sample sizes, from a minimum of 9 individuals per population to a maximum of 60 individuals per population. We draw repeated samples of individuals of that size from each of the 5 populations, during each repetition we draw two samples from each population (so we can infer the false negative rate of wrongly estimating that two samples come from a different population even though they were taken from the sample population). This means we have 10 repetitions for each of the 5 sample sizes and each of the 6 changeprops. So 10*6 changeprops (=60) for each of the 5 sample sizes, resulting in a total length of samplesizes of 300
 samplesizes<-c(10,20,30,40,60) #c(10,20,30,40,60)
 
-# Set the means you want to compare. To get a certain mean change in number of microhabitats between before and after, set the multiplier in the changenumber mean: a large multiplier means a large change
-meanchangenumber1<-1 #individuals will on average use 4.5 more habitats after the experiment ((10-numberbefore)*(4.5/4.5) = push everyone to 10 meaning that the lowest individuals will increase by 9 and the highest by 0 food items. Therefore, the average is 4.5 food items
-meanchangenumber2<-0.89 # 4 more habitats ((10-numberbefore)*(4/4.5)  = 4)
-meanchangenumber3<-0.67 #3 more habitats ((10-numberbefore)*(3/4.5)  = 3)
-meanchangenumber4<-0.44 # 2 more habitats ((10-numberbefore)*(2/4.5)  = 2)
-meanchangenumber5<-0.22 # 1 more habitat ((10-numberbefore)*(1/4.5) = 1)
-meanchangenumber6<-0 # 0 more habitats ((10-numberbefore)*(0/4.5)  = 0). 0 for false positives
+# Set the means you want to compare. To get a certain mean change in number of microhabitats between beforemaxnum and after, set the multiplier in the changenumber mean: a large multiplier means a large change. 
+maxnum <- 10 #maximum number of habitats possible
+maxinc <- (maxnum-1)/2 #4.5 habitats
+meanchangenumber1<-1 #100% of the maximum possible change (individuals in the suburban habitat will on average use 4.5 more habitats after the experiment, and individuals in the natural habitat will use 3.5). maxinc*1. For example, if max is 10, then avg increase of (10-1)/2=4-5. Push everyone to 10 meaning that the lowest individuals will increase by 9 and the highest by 0 food items. Therefore, the average is 4.5 food items. Subtract by 1 bc birds will live in a minimum of 1 habitat
+meanchangenumber2<-0.89 #89% of the maximum possible change (=4 more habitats for suburban birds and  3.1 more habitats for birds in natural areas. maxinc*0.89. If set this to be a value between 0-1, it will reflect the proportion of the max habitat change that individuals will on average show. If instead of working with proportions, you want this to reflect a specific number of habitats, can use your specific number to get the proportion. number habitats / maxinc   For example, we got the 0.89 by dividing 4/4.5. If you want this, replace the code with meanchangenumber2<-("number habitats"/maxinc)
+meanchangenumber3<-0.67 #3 more habitats for suburban, 2.3  more habitats for natural
+meanchangenumber4<-0.44 # 2 more habitats for suburban, 1.5  more habitats for natural
+meanchangenumber5<-0.22 # 1 more habitat for suburban, 0.8  more habitats for natural
+meanchangenumber6<-0 # 0 more habitats for suburban and  natural
 changenumbervariants<-c(meanchangenumber1,meanchangenumber2,meanchangenumber3,meanchangenumber4,meanchangenumber5,meanchangenumber6) #for false negatives
 
 #compare different baseline numbers for how many habitats these individuals use before the manipulation
@@ -1570,7 +1572,7 @@ post <- extract.samples(sj)
 
   # enter all of the results into the data sheet
     simresults[counter,]$n <- N_ind
-    simresults[counter,]$changenumber_mean <- (10-currentnumber_before)*(currentchangenumber)
+    simresults[counter,]$changenumber_mean <- maxinc*currentchangenumber #this will show the avg change in number of habitats
     simresults[counter,]$changenumber_sd <- 2 #change this SD to match that in changenumber (only changes in these 2 places)
     simresults[counter,]$repetition <- repetition
     simresults[counter,]$number_before <- currentnumber_before
